--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Form | Sign Up</title>
 </head>
 <body>
-    
+    <div class="left">
+
+    </div>
+    <div class="right">
+        
+    </div>
 </body>
 </html>
