--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <title>Form | Sign Up</title>
 </head>
 <body>
-    <div class="left">
+   <div class="container">
+     <div class="left">
 
     </div>
     <div class="right">
         
     </div>
+   </div>
 </body>
 </html>
