--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
    <div class="container">
      <div class="left">
-
+        <p class="kodecamp">Kodecamp</p>
     </div>
     <div class="right">
         
