--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
    <div class="container">
      <div class="left">
         <p class="kodecamp">Kodecamp</p>
+        <p class="head">JOIN OUR NEXT COHORT</p>
     </div>
     <div class="right">
         
