--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
      <div class="left">
         <p class="kodecamp">Kodecamp</p>
         <p class="head">JOIN OUR NEXT COHORT</p>
+        <p class="sub">An internship that changes newbies to probies</p>
     </div>
     <div class="right">
         
