--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <p class="sub">An internship that changes newbies to probies</p>
     </div>
     <div class="right">
-        
+        <div class="img">
+            
+        </div>
     </div>
    </div>
 </body>
