--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <div class="right">
         <div class="img">
-            
+            <img src="" alt="">
         </div>
     </div>
    </div>
