--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <div class="right">
         <div class="img">
-            <img src="" alt="">
+            <img src="./WhatsApp_Image_2021-08-10_at_12.52 1.png" alt="">
         </div>
     </div>
    </div>
