--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
    <div class="container">
      <div class="left">
         <p class="kodecamp">Kodecamp</p>
-        <p class="head">JOIN OUR NEXT COHORT</p>
+        <div class="txt">
+            <p class="head">JOIN OUR NEXT COHORT</p>
         <p class="sub">An internship that changes newbies to probies</p>
+        </div>
     </div>
     <div class="right">
         <div class="img">
