--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
         <div class="img">
             <img src="./WhatsApp_Image_2021-08-10_at_12.52 1.png" alt="">
         </div>
-        <form action="form"></form>
+        <form action="form">
+            <p class="sign_up">
+                Sign Up
+            </p>
+        </form>
     </div>
    </div>
 </body>
