--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
             <p class="sign_up">
                 Sign Up
             </p>
+            <div class="name">
+                <div class="fname">
+                    
+                </div>
+            </div>
         </form>
     </div>
    </div>
