--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </p>
             <div class="name">
                 <div class="fname">
-                    
+                    <label for="fname">First Name</label>
                 </div>
             </div>
         </form>
