--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <div class="name">
                 <div class="fname">
                     <label for="fname">First Name</label>
+                    <input type="text" name="" id="">
                 </div>
             </div>
         </form>
