--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
                     <label for="fname">First Name</label>
                     <input type="text" name="fname" id="">
                 </div>
+                <div class="fname">
+                    <label for="fname">First Name</label>
+                    <input type="text" name="fname" id="">
+                </div>
             </div>
         </form>
     </div>
