--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <label for="fname">First Name</label>
                     <input type="text" name="fname" id="">
                 </div>
-                <div class="fname">
+                <div class="lname">
                     <label for="fname">First Name</label>
                     <input type="text" name="fname" id="">
                 </div>
