--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <input type="text" name="fname" id="">
                 </div>
                 <div class="lname">
-                    <label for="fname">First Name</label>
+                    <label for="fname">Last Name</label>
                     <input type="text" name="fname" id="">
                 </div>
             </div>
