--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             </p>
             <div class="name">
                 <div class="fname">
-                    <label for="fname">First Name</label>
+                    <label for="fname">First Name</label><br>
                     <input type="text" name="fname" id="">
                 </div>
                 <div class="lname">
-                    <label for="lname">Last Name</label>
+                    <label for="lname">Last Name</label><br>
                     <input type="text" name="lname" id="">
                 </div>
             </div>
