--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
                     <input type="text" name="lname" id="">
                 </div>
             </div>
+            <div class="name">
+                <div class="fname">
+                    <label for="fname">First Name</label><br>
+                    <input type="text" name="fname" id="">
+                </div>
+                <div class="lname">
+                    <label for="lname">Last Name</label><br>
+                    <input type="text" name="lname" id="">
+                </div>
+            </div>
         </form>
     </div>
    </div>
