--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <div class="name">
                 <div class="fname">
-                    <label for="fname">First Name</label><br>
+                    <label for="fname">Email</label><br>
                     <input type="text" name="fname" id="">
                 </div>
                 <div class="lname">
