--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="name">
                 <div class="fname">
                     <label for="fname">Email</label><br>
-                    <input type="text" name="fname" id="">
+                    <input type="email" name="fname" id="">
                 </div>
                 <div class="lname">
                     <label for="lname">Last Name</label><br>
