--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <div class="name">
                 <div class="fname">
-                    <label for="fname">Email</label><br>
+                    <label for="email">Email</label><br>
                     <input type="email" name="email" id="">
                 </div>
                 <div class="lname">
