--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <input type="email" name="email" id="">
                 </div>
                 <div class="lname">
-                    <label for="lname">Last Name</label><br>
+                    <label for="lname">Gender</label><br>
                     <input type="text" name="lname" id="">
                 </div>
             </div>
