--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
                 <div class="lname">
                     <label for="lname">Gender</label><br>
-                    <input type="text" name="lname" id="">
+                    <input type="text" name="gender" id="">
                 </div>
             </div>
         </form>
