--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
                 </div>
                 <div class="lname">
                     <label for="lname">Gender</label><br>
-                    <input type="text" name="gender" id="">
+                    <select id="gender" name="gender">
+                        <option value="male">Male</option>
+                        <option value="female">Female</option>
+                        <option value="other">Other</option>
                 </div>
             </div>
         </form>
