--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
             </div>
             <div class="name">
-                <div class="email">
+                <div class="fname">
                     <label for="email">Email</label><br>
                     <input type="email" name="email" id="">
                 </div>
