--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 <div class="lname">
                     <label for="lname">Gender</label><br>
                     <select id="gender" name="gender">
+                        <option value="male"></option>
                         <option value="male">Male</option>
                         <option value="female">Female</option>
                         <option value="other">Other</option>
