--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
             <div class="name">
                 <div class="fname">
                     <label for="fname">First Name</label><br>
-                    <input type="text" name="fname" id="">
+                    <input type="password" name="fname" id="">
                 </div>
                 <div class="lname">
                     <label for="lname">Last Name</label><br>
-                    <input type="text" name="lname" id="">
+                    <input type="password" name="lname" id="">
                 </div>
             </div>
         </form>
