--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <input type="password" name="fname" id="">
                 </div>
                 <div class="lname">
-                    <label for="lname"></label><br>
+                    <label for="lname">Confirm Password</label><br>
                     <input type="password" name="lname" id="">
                 </div>
             </div>
