--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
             </div>
             <div class="name">
                 <div class="fname">
-                    <label for="fname">First Name</label><br>
+                    <label for="fname">Password</label><br>
                     <input type="text" name="fname" id="">
                 </div>
                 <div class="lname">
-                    <label for="lname">Last Name</label><br>
+                    <label for="lname">Confirm Password</label><br>
                     <input type="text" name="lname" id="">
                 </div>
             </div>
