--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
                         <option value="other">Other</option>
                 </div>
             </div>
-            <div class="name">
+            <div class="name2">
                 <div class="fname">
                     <label for="fname">Password</label><br>
-                    <input type="text" name="fname" id="">
+                    <input type="password" name="fname" id="">
                 </div>
                 <div class="lname">
                     <label for="lname">Confirm Password</label><br>
-                    <input type="text" name="lname" id="">
+                    <input type="password" name="lname" id="">
                 </div>
             </div>
         </form>
