--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
                 </div>
             </div>
             <div class="name2">
-                <div class="fname">
-                    <label for="fname">Password</label><br>
+                <div class="fname2">
+                    <label for="fname2">Password</label><br>
                     <input type="password" name="fname" id="">
                 </div>
-                <div class="lname">
+                <div class="lname2">
                     <label for="lname">Confirm Password</label><br>
                     <input type="password" name="lname" id="">
                 </div>
