--- a/index.html
+++ b/index.html
@@ -48,12 +48,9 @@
                 </div>
             </div>
             <div class="name2">
+                
                 <div class="mname2">
-                    <label for="mname2">Password</label><br>
-                    <input type="password" name="fname" id="">
-                </div>
-                <div class="mname2">
-                    <label for="lname">Confirm Password</label><br>
+                    <label for="mname">Confirm Password</label><br>
                     <input type="password" name="lname" id="">
                 </div>
             </div>
