--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@
                         <option value="other">Other</option>
                 </div>
             </div>
-       
+            <div class="name">
+                <div class="passw">
+                    <label for="passw">Password</label>
+                    <input type="password" name="" id="">
+                </div>
+            </div>
         </form>
     </div>
    </div>
