--- a/index.html
+++ b/index.html
@@ -47,10 +47,14 @@
                         <option value="other">Other</option>
                 </div>
             </div>
-            <div class="pass">
-                <div class="passw">
-                    <label for="passw">Password</label>
-                    <input type="password" name="" id="">
+            <div class="name">
+                <div class="fname">
+                    <label for="fname">First Name</label><br>
+                    <input type="text" name="fname" id="">
+                </div>
+                <div class="lname">
+                    <label for="lname">Last Name</label><br>
+                    <input type="text" name="lname" id="">
                 </div>
             </div>
         </form>
