--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="img">
                 <img src="./WhatsApp_Image_2021-08-10_at_12.52 1.png" alt="">
             </div>
-        
+            <form action="form"></form>
         
         </div>
    </div>
