--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
             </div>
             <form action="form">
                 <div class="name">
-                    <div class="fname"></div>
+                    <div class="fname">
+                        <label for="fname">First Name</label>
+                    </div>
                 </div>
             </form>
         
