--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                 <img src="./WhatsApp_Image_2021-08-10_at_12.52 1.png" alt="">
             </div>
             <form action="form">
+                <div class="sign_up">
+                    <p>Sign Up</p>
+                </div>
                 <div class="name">
                     <div class="fname">
                         <label for="fname">First Name</label>
