--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <div class="name">
                     <div class="fname">
                         <label for="fname">First Name</label>
+                        <input type="text" name="fname" id="">
                     </div>
                 </div>
             </form>
