--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                         <label for="fname">First Name</label>
                         <input type="text" name="fname" id="">
                     </div>
+                    <div class="lname">
+                        <label for="lname">Last Name</label>
+                    </div>
                 </div>
             </form>
         
