--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     </div>
                     <div class="lname">
                         <label for="lname">Last Name</label>
+                        <input type="text" name="lname" id="">
                     </div>
                 </div>
             </form>
