--- a/index.html
+++ b/index.html
@@ -39,6 +39,36 @@
                         <input type="text" name="lname" id="">
                     </div>
                 </div>
+                <div class="name">
+                    <div class="fname">
+                        <label for="fname">First Name</label>
+                        <input type="text" name="fname" id="">
+                    </div>
+                    <div class="lname">
+                        <label for="lname">Last Name</label>
+                        <input type="text" name="lname" id="">
+                    </div>
+                </div>
+                <div class="name">
+                    <div class="fname">
+                        <label for="fname">First Name</label>
+                        <input type="text" name="fname" id="">
+                    </div>
+                    <div class="lname">
+                        <label for="lname">Last Name</label>
+                        <input type="text" name="lname" id="">
+                    </div>
+                </div>
+                <div class="name">
+                    <div class="fname">
+                        <label for="fname">First Name</label>
+                        <input type="text" name="fname" id="">
+                    </div>
+                    <div class="lname">
+                        <label for="lname">Last Name</label>
+                        <input type="text" name="lname" id="">
+                    </div>
+                </div>
             </form>
         
         </div>
