--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
                         <input type="text" name="lname" id="">
                     </div>
                 </div>
+                <div class="info">
+                    <label for="msg">Tell us about you</label>
+                    <textarea name="msg" id="" cols="30" rows="10"></textarea>
+                </div>
             </form>
         
         </div>
