--- a/index.html
+++ b/index.html
@@ -65,14 +65,15 @@
                         <input type="text" name="fname" id="">
                     </div>
                     <div class="lname">
-                        <label for="lname">Last Name</label>
+                        <label for="lname">Last Name</label><br>
                         <input type="text" name="lname" id="">
                     </div>
                 </div>
                 <div class="info">
-                    <label for="msg">Tell us about you</label>
+                    <label for="msg">Tell us about you</label><br>
                     <textarea name="msg" id="" cols="75" rows="3"></textarea>
                 </div>
+                <a href="#" class="btn"></a>
             </form>
         
         </div>
