--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <label for="msg">Tell us about you</label><br>
                     <textarea name="msg" id="" cols="75" rows="3"></textarea>
                 </div>
-                <a href="#" class="btn"></a>
+                <a href="#" class="btn">Create account</a>
             </form>
         
         </div>
