--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
                     <label for="msg">Tell us about you</label><br>
                     <textarea name="msg" id="" cols="75" rows="3"></textarea>
                 </div>
+              <div class="button">
                 <a href="#" class="btn">Create account</a>
+              </div>
             </form>
         
         </div>
