--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
                         <input type="text" name="fname" id="">
                     </div>
                     <div class="lname">
-                        <label for="lname">Last Name</label><br>
+                        <label for="lname">Last Name</label>
                         <input type="text" name="lname" id="">
                     </div>
                 </div>
                 <div class="info">
-                    <label for="msg">Tell us about you</label><br>
+                    <label for="msg">Tell us about you</label>
                     <textarea name="msg" id="" cols="75" rows="3"></textarea>
                 </div>
               <div class="button">
