--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                 </div>
                 <div class="name">
                     <div class="fname">
-                        <label for="fname">First Name</label>
-                        <input type="text" name="fname" id="">
+                        <label for="fname">Password</label>
+                        <input type="password" name="fname" id="">
                     </div>
                     <div class="lname">
                         <label for="lname">Last Name</label>
