--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                         <input type="password" name="fname" id="">
                     </div>
                     <div class="lname">
-                        <label for="lname">Last Name</label>
-                        <input type="text" name="lname" id="">
+                        <label for="lname">Confirm Password</label>
+                        <input type="password" name="lname" id="">
                     </div>
                 </div>
                 <div class="name">
