--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <input type="email" name="fname" id="">
                     </div>
                     <div class="lname">
-                        <label for="lname">Last Name</label>
+                        <label for="lname">Gender</label>
                         <input type="text" name="lname" id="">
                     </div>
                 </div>
