--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
                 </div>
                 <div class="name">
                     <div class="fname">
-                        <label for="fname">First Name</label>
+                        <label for="fname">Education Level</label>
                         <input type="text" name="fname" id="">
                     </div>
                     <div class="lname">
-                        <label for="lname">Last Name</label>
+                        <label for="lname">Experience Level</label>
                         <input type="text" name="lname" id="">
                     </div>
                 </div>
