--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <input type="text" name="lname" id="">
                     </div>
                 </div>
-                <div class="name">
+                <div class="name" id="input-container">
                     <div class="fname">
                         <label for="fname">Education Level</label>
                         <input type="text" name="fname" id="">
