--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                         <input type="text" name="lname" id="">
                     </div>
                 </div>
-                <div class="name" id="input-container">
-                    <div class="fname">
+                <div class="name" >
+                    <div class="fname" id="input-container">
                         <label for="fname">Education Level</label>
                         <input type="text" name="fname" id="">
                     </div>
