--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </div>
                 </div>
                 <div class="name" >
-                    <div class="fname" id="input-container">
+                    <div class="fname" >
                         <label for="fname">Education Level</label>
                         <input type="text" name="fname" id="">
                     </div>
