--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
                     </div>
                     <div class="lname">
                         <label for="lname">Experience Level</label>
+                       <div class="input-with-arrow">
                         <input type="text" name="lname" id="">
+                       </div>
                     </div>
                 </div>
                 <div class="info">
