--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
                 <div class="name" >
                     <div class="fname" >
                         <label for="fname">Education Level</label>
-                        <input type="text" name="fname" id="">
+                        <div class="input-with-arrow">
+                            <input type="text" name="lname" id="">
+                           </div>
                     </div>
                     <div class="lname">
                         <label for="lname">Experience Level</label>
