--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
                     </div>
                     <div class="lname">
                         <label for="lname">Gender</label>
-                        <input type="text" name="lname" id="">
+                        <div class="input-with-arrow">
+                            <input type="text" name="lname" id="">
+                           </div>
                     </div>
                 </div>
                 <div class="name" >
