--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
                         <label for="lname">Gender</label>
                         <div class="input-with-arrow">
                             <input type="text" name="lname" id="">
-                           </div>
+                        </div>
+                        <div class="arrow-icon">
+                            <img src="./Polygon 2.png" alt="">
+                        </div>
                     </div>
                 </div>
                 <div class="name" >
