--- a/index.html
+++ b/index.html
@@ -70,12 +70,18 @@
                         <div class="input-with-arrow">
                             <input type="text" name="lname" id="">
                            </div>
+                           <div class="arrow-icon">
+                            <img src="./Polygon 2.png" alt="">
+                        </div>
                     </div>
                     <div class="lname">
                         <label for="lname">Experience Level</label>
                        <div class="input-with-arrow">
                         <input type="text" name="lname" id="">
                        </div>
+                       <div class="arrow-icon">
+                        <img src="./Polygon 2.png" alt="">
+                    </div>
                     </div>
                 </div>
                 <div class="info">
