--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <div class="lname">
                         <label for="lname">Gender</label>
                         <div class="input-with-arrow">
-                            <i><img src="./Polygon 2.png" alt=""></i>
+                            <i class="icon"><img src="./Polygon 2.png" alt=""></i>
                             <input type="text" name="lname" id="">
                         </div>
                     
