--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Fraunces:opsz,wght@9..144,700&family=Kumbh+Sans:wght@400;700&family=Lexend+Deca&family=Montserrat:wght@500&family=Open+Sans&family=Playfair+Display:wght@700&family=Poppins:wght@700&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Description" content="Start your tech journey by taking a step now">
     <link rel="stylesheet" href="style.css">
     <title>Form | Sign Up</title>
 </head>
